# ZeEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: ZeEngineConfig.cmake.in
include/core/: IGameState.h
include/ecs/: arche_type.h  archetype_factory.h  chunk_pool.h  ecs.h  entity.h
src/core/: GameEngine.cpp  GameEngine.h  GameEngineStateMachine.cpp  GameEngineStateMachine.h  GameLoop.cpp  GameLoop.h  IGameEngine.h  IGameEngineCore.h  IGameLoop.h
src/ecs/: arche_type.cpp  archetype_factory.cpp  chunk_pool.cpp  chunk_pool.h  ecs.cpp  ecs.h  entity.cpp
tests/: CMakeLists.txt  ChunkTests.cpp  EntityComponentSystemTests.cpp  FakeEngineCore.cpp  FakeEngineCore.h  FakeGameEngine.cpp  GameLoopTests.cpp  StateTests.cpp  all_tests.cpp  chunk_pool_tests.cpp  ecs_tests.cpp  entity_manager_tests.cpp  fakegameengine.h
